ui overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f7f4ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #e0cbcb;
+    border-radius: 100vh;
+    border: 3px solid #f6f7ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
+  }
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -33,7 +54,7 @@ body {
 }
 
 .main-layout-card {
-  height: calc(100vh - 132px);
-  max-height: calc(100vh - 132px);
+  height: calc(100vh - 100px);
+  max-height: calc(100vh - 100px);
 }
 
